--- a/app/assets/stylesheets/pages/locations.scss
+++ b/app/assets/stylesheets/pages/locations.scss
@@ -17,6 +17,10 @@ body.home-locations {
   .tabs-underlined .tab-underlined {
     color: $color-secondary;
   }
+
+  .parken {
+    line-height: 2rem;
+  }
 }
 
 .location-img {
