--- a/app/views/home/highlights.html.erb
+++ b/app/views/home/highlights.html.erb
@@ -1,22 +1,24 @@
 <div class="home-highlights">
+  <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
   <div class="content">
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
     <section>
       <h1>Tagesausflüge entlang der Weinstraße</h1>
       <h3>Weingüter</h3>
       <p>Manincor<br>
       Ein Landsitz aus dem sehr frühen 17. Jahrhundert mit einem hochmodernen, unterirdischen Weinkeller</p>
+      <br>
       <p>Elena Walch<br>
       Ein früheres Jesuitenkloster mit schönem Garten und elegantem Bistro</p>
+      <br>
       <p>Alois Lageder<br>
       Erst im Gutsrestaurant „Paradeis“ einkehren, dann im schattigen Garten des Anwesens aus dem 13. Jahrhundert ausruhen.</p>
-
+      <br>
       <h3>Burg Hocheppan</h3>
       <p>Ihr startet die ca. 40-minütige Wanderung/Aufstieg beim Schloss Hotel Korb. Oben erwartet Euch eine der ältesten & bedeutendsten Burgen in der Region mit einer tollen Burgschenke, die auch super für Kinder ist. Im Anschluss könnt ihr über eine 60 Meter lange Holztreppe das Hocheppantal durchqueren und über die Burgruine Boymont zurücklaufen (insgesamt ca. 2,5 Std.)</p>
-
+      <br>
       <h3>Mendel</h3>
       <p>Die Mendel, den Hausberg Kalterns, erreicht ihr mit der Mendelbahn. Hier oben erwarten Euch unzählige schöne Wanderwege, wie z.B. eine Wanderung zur Halbweghütte mit naheliegendem Aussichtspunkt Lavinaspitz. Von hier habt ihr eine tolle Sicht auf die Umgebung Kalterns.</p>
-
+      <br>
       <h3>Kalterer See</h3>
       <p>Seeumwanderung, Fahrradtour, Tretboot fahren</p>
     </section>
@@ -27,10 +29,10 @@
       <h1>Unsere 3 Südtirol-Highlights</h1>
       <h3>Ritten</h3>
       <p>Den Ritten (Hausberg von Bozen) erreicht ihr mit der Rittnerbahn. Oben angekommen, empfehlen wir den Aufstieg zum Schutzhaus Rittner Horn, wo man auch einkehren kann. Hier oben hat man einen atemberaubenden 360-Grad-Blick auf die schönsten Dolomitengipfel.</p>
-
+      <br>
       <h3>Seiser Alm</h3>
       <p>Die Seiser Alm ist die größte Hochalm Europas und eines der schönsten Fleckchen Erde. Eine Seilbahn bringt Euch von Seis am Schlern hoch auf die Alm. Wir empfehlen Euch, oben an der Seilbahn ein E-Mountainbike zu mieten, um die Gegend zu erkunden. Hütten: Tschötsch Alm & Rauch Hütte</p>
-
+      <br>
       <h3>Rosengarten</h3>
       <p>Das rote Alpenglühen des Rosengartens ist eines der schönsten Naturschauspiele in den Dolomiten. Daher empfehlen wir eine Wanderung in der Rosengartengruppe am späten Nachmittag/Abend bei schönem Wetter, wenn die Sonne untergeht.</p>
     </section>
@@ -58,7 +60,7 @@
       <p>Ottmanngut<br>
       <a href="http://www.ottmanngut.it">www.ottmanngut.it</a></p>
       <p>Villa Arnica<br>
-      <a href="http://www.villaar nica.de">www.villaar nica.de</a></p>
+      <a href="www.villaarnica.it">www.villaarnica.it</a></p>
 
       <h2>Radein</h2>
       <p>Zirmerhof<br>
@@ -66,7 +68,7 @@
 
       <h2>Seiser Alm</h2>
       <p>Adler Ritten Lodge<br>
-      <a href="http://www.parkhotel-holzner.com">www.parkhotel-holzner.com</a></p>
+      <a href="https://www.adler-resorts.com/de/seiser-alm-hotel/339-0.html">www.adler-resorts.com</a></p>
 </section>
   </div>
 </div>
