--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -1,6 +1,6 @@
 <div class="home-infos">
+  <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
   <div class="content">
-    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Anreise</h1>
@@ -22,21 +22,33 @@
 
     <section>
       <h1>Unterkünfte</h1>
-      <h2>Eppan</h2>
-      <p><a href="http://www.hotel-schloss-korb.com" target="_blank">Hotel Schloss Korb</a></p>
-      <p><a href="http://www.christof.it" target="_blank">Hotel Christof</a></p>
-      <p><a href="http://www.ferien-suedtirol.com" target="_blank">Residence & Garden Hotel</a></p>
-      <p><a href="http://www.golfandcountry.it" target="_blank">The Lodge - Golfclub Eppan</a></p>
-      <p><a href="http://www.penegalblick.it" target="_blank">Pension Penegalblick</a> / <a href="http://www.steingarten.it">Steingarten</a></p>
+        <h2>Eppan</h2>
+          <p>Hotel Schloss Korb<br>
+          <a href="www.schloss-hotel-korb.com" target="_blank">www.schloss-hotel-korb.com</a></p>
+          <p>Hotel Christof<br>
+          <a href="http://www.christof.it" target="_blank">www.christof.it</a></p>
+          <p>Residence & Garden Hotel<br>
+          <a href="http://www.ferien-suedtirol.com" target="_blank">www.ferien-suedtirol.com</a></p>
+          <p>The Lodge - Golfclub Eppan<br>
+          <a href="http://www.golfandcountry.it" target="_blank">www.golfandcountry.it</a></p>
+          <p>Pension Penegalblick<br>
+          <a href="http://www.penegalblick.it" target="_blank">www.penegalblick.it</a> /
+          Steingarten<br>
+          <a href="http://www.steingarten.it" target="_blank">www.steingarten.it</a></p>
 
-      <h2>St. Pauls</h2>
-      <p><a href="http://www.gutentropfen.com"target="_blank">B&B Zum guten Tropfen</a></p>
-      <p><a href="http://www.klauslentsch.com"target="_blank">Weingut Klaus Lentsch, Apartment Fuchslahn</a></p>
-      <p><a href="http://www.apartmentwieser.it"target="_blank">Apartment Wieser</a></p>
+        <h2>St. Pauls</h2>
+          <p>B&B Zum guten Tropfen<br>
+          <a href="http://www.gutentropfen.com" target="_blank">www.gutentropfen.com</a></p>
+          <p>Weingut Klaus Lentsch, Apartment Fuchslahn<br>
+          <a href="https://www.booking.com/hotel/it/weingut-klaus-lentsch.de.html" target="_blank">www.weingut-klaus-lentsch.de</a></p>
+          <p>Apartment Wieser<br>
+          <a href="http://www.apartmentwieser.it" target="_blank">www.apartmentwieser.it</a></p>
 
-      <h2>Kaltern</h2>
-      <p><a href="http://www.weisses-rössl-kaltern.com"target="_blank">Weißes Rössl</a></p>
+        <h2>Kaltern</h2>
+          <p>Weißes Rössl<br>
+          <a href="www.weisses-roessl-kaltern.com" target="_blank">www.weisses-roessl-kaltern.com</a></p>
     </section>
+
     <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
@@ -68,19 +80,29 @@
 
     <section>
       <h1>Kontakte</h1>
-      <p>Sabine und Hubertus Luckner, Klosterhof 1, 25436 Uetersen
-        <br>Martina Hoyer-Hertel, Straßweg 24, 22607 Hamburg
-        <br>Peter Hertel, Elbchaussee 197, 22605 Hamburg
+      <p>Sabine und Hubertus Luckner</p>
+        <p class="adresse">Klosterhof 1, 25436 Uetersen</p>
+      <p>Martina Hoyer-Hertel</p>
+        <p class="adresse">Straßweg 24, 22607 Hamburg</p>
+      <p>Peter Hertel</p>
+        <p class="adresse">Elbchaussee 197, 22605 Hamburg</p>
+      <br>
+      <p>Daniela und Jacob Luckner</p>
+        <p class="adresse">Danziger Straße 57, 10435 Berlin
+        <br>danielaundjacobluckner@gmail.com</p>
+
+      <p>Daniela +49 17680636231
+        <br>Jacob +49 1741969090
       </p>
       <br>
-      <p>Daniela und Jacob Luckner, Danziger Straße 57, 10435 Berlin
-        <br>Daniela +49 17680636231; Jacob +49 1741969090
-      </p>
-      <br>
-      <p>Josefine Theden-Schow +49 1739212080; Josephine Stolberg +49 16093911444;
-        <br>Nikola Hertel +49 17630464353; Pauline Dill +49 17631233737
-        <br>Georg Oldenburg +49 17626110600; Jakob Below +49 15735805059
-        <br>Jacob Bülow +49 1703444606; Robert Mangin +49 15142510654
+      <p>Josefine Theden-Schow +49 1739212080
+        <br>Josephine Stolberg +49 16093911444
+        <br>Nikola Hertel +49 17630464353
+        <br>Pauline Dill +49 17631233737
+        <br>Georg Oldenburg +49 17626110600
+        <br>Jakob Below +49 15735805059
+        <br>Jacob Bülow +49 1703444606
+        <br>Robert Mangin +49 15142510654
       </p>
     </section>
   </div>
