--- a/app/views/home/locations.html.erb
+++ b/app/views/home/locations.html.erb
@@ -26,13 +26,12 @@
       <a href="https://maps.app.goo.gl/PG4CrQQKwpFGEprV6">maps</a>
     </section>
 
-    <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
-
-
-    <section>
-      <h2>Parkplatz Trutsch</h2>
-      <p>Trucci, 39052 Kaltern / Südtirol</p>
-      <a href="https://maps.app.goo.gl/xvJro1LZ1MRW5bRV7">maps</a>
+    <section class="parken">
+      <h1>Parken</h1>
+      <p>Vor dem Ansitz Zinnenberg gibt es ausreichend Parkplätze vor der Location.
+      <p>Das Schloss Freudenstein (Hochzeitsfest) verfügt über einen großzügigen Parkplatz.</p>
+      <p>Für die kirchliche Trauung und den Empfang in Kaltern empfehlen wir Euch, auf dem Parkplatz Trutsch (<a href="https://maps.app.goo.gl/xvJro1LZ1MRW5bRV7">maps</a>) zu parken:</p>
     </section>
+    <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
   </div>
 </div>
