--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -1,18 +1,18 @@
 <div class="home-rsvp">
+  <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
   <div class="content">
-    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
     <section>
       <h1>RSVP</h1>
       <p>Um Antwort wird gebeten bis zum 24. August 2024 an:</p>
       <p><a href="mailto:danielaundjacob@gmail.com">danielaundjacob@gmail.com</a></p>
       <p>Bitte teilt uns folgende Informationen mit:
         <br>* Zu- oder Absage
-        <br> Anzahl Kinder
         <br>* Unterkunft
-        <br>* Vegan/ Vegetarisch
+        <br>* Kurze Info, wenn Anreise mit Flug aus HH/BER (s. Info Shuttle)
+        <br>* Kurzer Hinweis falls vegetarisch
+        <br>* Anzahl Kinder bei Kirche & Empfang
+        <br>* Bedarf für Babybetreuung am Abend
       </p>
-      <p>Bei weiteren Fragen meldet Euch gerne telefonisch bei uns:</p>
-      <p class="contact">Dani: +49 17680636231<br>Jacob: +49 1741969090</p>
     </section>
   </div>
 </div>
