--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -22,7 +22,7 @@ body.home-index {
   body.home-index {
     background-size: contain; /* Bild in voller Breite anzeigen und proportional skalieren */
     background-position: center bottom; /* Positionierung des Bildes unten */
-    min-height: 100vh; /* Anpassen für Tablets und kleinere Bildschirme */
+    min-height: 90vh; /* Anpassen für Tablets und kleinere Bildschirme */
   }
 }
 
@@ -30,7 +30,7 @@ body.home-index {
   body.home-index {
     background-size: contain; /* Bild in voller Breite anzeigen und proportional skalieren */
     background-position: center bottom; /* Positionierung des Bildes unten */
-    min-height: 100vh; /* Anpassen für Smartphones */
+    min-height: 90vh;
   }
 }
 
