removed min-height

--- a/app/assets/stylesheets/pages/details.scss
+++ b/app/assets/stylesheets/pages/details.scss
@@ -17,6 +17,7 @@ body.home-details {
 
 .details-img {
   padding-top: 5vh;
+  padding-bottom: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
