--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -53,6 +53,8 @@
 
     <section>
       <h1>Shuttle</h1>
+        <%= image_tag "Shuttle.png", class: "details-img", alt: "shuttle" %>
+
     </section>
     <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
