--- a/app/assets/stylesheets/pages/general.scss
+++ b/app/assets/stylesheets/pages/general.scss
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: 100vh;
+  // min-height: 100vh;
   padding-top: 20vh;
 }
 
