--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -8,7 +8,8 @@
       <p>Bitte teilt uns folgende Informationen mit:
         <br>* Zu- oder Absage
         <br>* Unterkunft
-        <br>* Kurze Info, wenn Anreise mit Flug aus HH/BER (s. Info Shuttle)
+        <br>* Kurze Info, wenn Anreise mit Flug aus HH/BER
+        <br>(s. Info Shuttle)
         <br>* Kurzer Hinweis falls vegetarisch
         <br>* Anzahl Kinder bei Kirche & Empfang
         <br>* Bedarf für Babybetreuung am Abend
