--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -83,18 +83,20 @@
     <section>
       <h1>Kontakte</h1>
       <p>Sabine und Hubertus Luckner</p>
-        <p class="adresse">Klosterhof 1, 25436 Uetersen</p>
+      <p class="adresse">Klosterhof 1, 25436 Uetersen</p>
+      <br>
       <p>Martina Hoyer-Hertel</p>
-        <p class="adresse">Straßweg 24, 22607 Hamburg</p>
+      <p class="adresse">Straßweg 24, 22607 Hamburg</p>
+      <br>
       <p>Peter Hertel</p>
-        <p class="adresse">Elbchaussee 197, 22605 Hamburg</p>
+      <p class="adresse">Elbchaussee 197, 22605 Hamburg</p>
       <br>
       <p>Daniela und Jacob Luckner</p>
         <p class="adresse">Danziger Straße 57, 10435 Berlin
-        <br>danielaundjacobluckner@gmail.com</p>
-
+      <p><a href="mailto:danielaundjacob@gmail.com">danielaundjacob@gmail.com</a></p>
+      <br>
       <p>Daniela +49 17680636231
-        <br>Jacob +49 1741969090
+      <br>Jacob +49 1741969090
       </p>
       <br>
       <p>Josefine Theden-Schow +49 1739212080
