photo + final fixes

--- a/app/views/home/locations.html.erb
+++ b/app/views/home/locations.html.erb
@@ -1,6 +1,6 @@
 <div class="home-locations">
-  <div class="content">
       <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
+  <div class="content">
 
     <section>
       <h2>Ansitz Zinnenberg</h2>
@@ -32,6 +32,6 @@
       <p>Das Schloss Freudenstein (Hochzeitsfest) verfügt über einen großzügigen Parkplatz.</p>
       <p>Für die kirchliche Trauung und den Empfang in Kaltern empfehlen wir Euch, auf dem Parkplatz Trutsch (<a href="https://maps.app.goo.gl/xvJro1LZ1MRW5bRV7">maps</a>) zu parken:</p>
     </section>
-    <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
   </div>
+    <%= image_tag "parken.png", class: "location-img", alt: "locations map" %>
 </div>
