--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -10,4 +10,6 @@
         <p>Dani & Jacob</p>
     </section>
   </div>
+    <%= image_tag "duj_foto.png", class: "duj", alt: "weintraube" %>
+
 </div>
