--- a/app/assets/stylesheets/pages/details.scss
+++ b/app/assets/stylesheets/pages/details.scss
@@ -22,7 +22,7 @@ body.home-details {
   justify-content: center;
   align-items: center;
   margin: 0; /* Abstand zu den anderen Abschnitten */
-  width: 40vw;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -31,6 +31,6 @@ body.home-details {
   }
 
   .details-img {
-    width: 80vw;
+    width: 100%;
   }
 }
