--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -1,6 +1,6 @@
 <div class="home-details">
   <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
-
+<div class="content">
         <%= image_tag "details.png", class: "details-img", alt: "details" %>
-
+</div>
 </div>
