--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -67,7 +67,7 @@
     <section>
       <h1>Reden & Beiträge</h1>
       <p>Für eventuelle Reden & Beiträge meldet Euch bitte bei:</p>
-      <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikolahertel@outlook.de">nikolahertel@outlook.de</a></p>
+      <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikola.hertel@outlook.de">nikola.hertel@outlook.de</a></p>
     </section>
     <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
